On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   sorting_problems/Cargo.toml
	new file:   sorting_problems/src/a_towers.rs
	modified:   sorting_problems/src/b_equal_candies.rs
	new file:   sorting_problems/src/b_grow_the_tree.rs
	new file:   sorting_problems/src/helpful_math.rs

--- a/sorting_problems/Cargo.toml
+++ b/sorting_problems/Cargo.toml
@@ -165,3 +165,15 @@ path = "src/a_choose_two_num.rs"
 [[bin]]
 name = "b_equal_candies"
 path = "src/b_equal_candies.rs"
+[[bin]]
+name = "b_grow_the_tree"
+path = "src/b_grow_the_tree.rs"
+
+[[bin]]
+name = "helpful_math"
+path = "src/helpful_math.rs"
+
+[[bin]]
+name = "a_towers"
+path = "src/a_towers.rs"
+
