On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   sorting_problems/Cargo.toml
	new file:   sorting_problems/src/.cph/.a_amusing_joke.rs_fea9d35755e673a851e39e6dfb0615ca.prob
	new file:   sorting_problems/src/.cph/.a_make_equal_to_b.rs_0e61a5c9c04c35b775d4ad3cb017333f.prob
	new file:   sorting_problems/src/.cph/.b_atillas_favorite_problem.rs_fb1ebb499369906f4d6f35f23117759c.prob
	new file:   sorting_problems/src/.cph/.b_barrels.rs_0fa8faa94bb3aa8cfb6cc1062acdb93e.prob
	new file:   sorting_problems/src/.cph/.b_middle_class.rs_fe205ee53d1b7dc5d0f7c4754fccd555.prob
	new file:   sorting_problems/src/.cph/.b_sorted_adj_diff.rs_48a1d72ef8ad293a504b1bd82421d53e.prob
	modified:   sorting_problems/src/a_amusing_joke.rs
	new file:   sorting_problems/src/a_make_equal_to_b.rs
	modified:   sorting_problems/src/b_atillas_favorite_problem.rs
	modified:   sorting_problems/src/b_barrels.rs
	modified:   sorting_problems/src/b_middle_class.rs
	modified:   sorting_problems/src/b_sorted_adj_diff.rs

--- a/sorting_problems/Cargo.toml
+++ b/sorting_problems/Cargo.toml
@@ -205,3 +205,7 @@ path = "src/a_remove_smallest.rs"
 name = "b_basketball_together"
 path = "src/b_basketball_together.rs"
 
+[[bin]]
+name = "a_make_equal_to_b"
+path = "src/a_make_equal_to_b.rs"
+
