On branch main  Your branch is up to date with 'origin/main'.

--- a/dsa/Cargo.toml
+++ b/dsa/Cargo.toml
@@ -61,3 +61,6 @@ path = "src/linkedlist_stack.rs"
 name = "reverse_polish"
 path = "src/reverse_polish.rs"
 
+[[bin]]
+name="testing"
+path="src/testing.rs"
