--- a/prob/Cargo.toml
+++ b/prob/Cargo.toml
@@ -346,3 +346,18 @@ path = "src/get_middle_linked_list.rs"
 [[bin]]
 name="b_01_game"
 path="src/b_01_game.rs"
+[[bin]]
+name="ABC"
+path="src/ABC.rs"
+[[bin]]
+name="abc"
+path="src/abc.rs"
+[[bin]]
+name="b_having_been_treasurer"
+path="src/b_having_been_treasurer.rs"
+[[bin]]
+name="monk_and_the_magical_candy"
+path="src/monk_and_the_magical_candy.rs"
+[[bin]]
+name="next_great"
+path="src/next_great.rs"
