On branch main  Your branch is up to date with 'origin/main'.

--- a/prob/Cargo.toml
+++ b/prob/Cargo.toml
@@ -361,3 +361,18 @@ path="src/monk_and_the_magical_candy.rs"
 [[bin]]
 name="next_great"
 path="src/next_great.rs"
+[[bin]]
+name="a_adj_digit_sum"
+path="src/a_adj_digit_sum.rs"
+[[bin]]
+name="fizzbuzz"
+path="src/fizzbuzz.rs"
+[[bin]]
+name="left_max"
+path="src/left_max.rs"
+[[bin]]
+name="reach_value"
+path="src/reach_value.rs"
+[[bin]]
+name="palindrome_linked_list"
+path="src/palindrome_linked_list.rs"
