On branch main  Your branch is up to date with 'origin/main'.

--- a/prob/Cargo.toml
+++ b/prob/Cargo.toml
@@ -376,3 +376,30 @@ path="src/reach_value.rs"
 [[bin]]
 name="palindrome_linked_list"
 path="src/palindrome_linked_list.rs"
+[[bin]]
+name="self_dividing"
+path="src/self_dividing.rs"
+[[bin]]
+name="ugly_number"
+path="src/ugly_number.rs"
+[[bin]]
+name="day_of_the_year"
+path="src/day_of_the_year.rs"
+[[bin]]
+name="b_perfecto"
+path="src/b_perfecto.rs"
+[[bin]]
+name="a_play_never_ends"
+path="src/a_play_never_ends.rs"
+[[bin]]
+name="c_trapmigiano_reggiano"
+path="src/c_trapmigiano_reggiano.rs"
+[[bin]]
+name="a_make_it_zero"
+path="src/a_make_it_zero.rs"
+[[bin]]
+name="infinite_sequence_easy"
+path="src/infinite_sequence_easy.rs"
+[[bin]]
+name="b_comparison_string"
+path="src/b_comparison_string.rs"
