--- a/dsa/Cargo.toml
+++ b/dsa/Cargo.toml
@@ -73,17 +73,23 @@ path = "src/prims.rs"
 name = "graphs"
 path = "src/graphs.rs"
 [[bin]]
-name="connnected_component"
-path="src/connnected_component.rs"
+name = "connnected_component"
+path = "src/connnected_component.rs"
 [[bin]]
-name="dfs"
-path="src/dfs.rs"
+name = "dfs"
+path = "src/dfs.rs"
 [[bin]]
-name="connected_component_store"
-path="src/connected_component_store.rs"
+name = "connected_component_store"
+path = "src/connected_component_store.rs"
 [[bin]]
-name="dfs_cycle"
-path="src/dfs_cycle.rs"
+name = "dfs_cycle"
+path = "src/dfs_cycle.rs"
 [[bin]]
-name="flood-fill-graph"
-path="src/flood-fill-graph.rs"
+name = "flood-fill-graph"
+path = "src/flood-fill-graph.rs"
+[[bin]]
+name = "dfs-tree"
+path = "src/dfs-tree.rs"
+[[bin]]
+name="dfs-tree-height-depth"
+path="src/dfs-tree-height-depth.rs"
