--- a/prob/Cargo.toml
+++ b/prob/Cargo.toml
@@ -344,62 +344,75 @@ path = "src/remove_duplicate_stack.rs"
 name = "get_middle_linked_list"
 path = "src/get_middle_linked_list.rs"
 [[bin]]
-name="b_01_game"
-path="src/b_01_game.rs"
+name = "b_01_game"
+path = "src/b_01_game.rs"
 [[bin]]
-name="ABC"
-path="src/ABC.rs"
+name = "ABC"
+path = "src/ABC.rs"
 [[bin]]
-name="abc"
-path="src/abc.rs"
+name = "abc"
+path = "src/abc.rs"
 [[bin]]
-name="b_having_been_treasurer"
-path="src/b_having_been_treasurer.rs"
+name = "b_having_been_treasurer"
+path = "src/b_having_been_treasurer.rs"
 [[bin]]
-name="monk_and_the_magical_candy"
-path="src/monk_and_the_magical_candy.rs"
+name = "monk_and_the_magical_candy"
+path = "src/monk_and_the_magical_candy.rs"
 [[bin]]
-name="next_great"
-path="src/next_great.rs"
+name = "next_great"
+path = "src/next_great.rs"
 [[bin]]
-name="a_adj_digit_sum"
-path="src/a_adj_digit_sum.rs"
+name = "a_adj_digit_sum"
+path = "src/a_adj_digit_sum.rs"
 [[bin]]
-name="fizzbuzz"
-path="src/fizzbuzz.rs"
+name = "fizzbuzz"
+path = "src/fizzbuzz.rs"
 [[bin]]
-name="left_max"
-path="src/left_max.rs"
+name = "left_max"
+path = "src/left_max.rs"
 [[bin]]
-name="reach_value"
-path="src/reach_value.rs"
+name = "reach_value"
+path = "src/reach_value.rs"
 [[bin]]
-name="palindrome_linked_list"
-path="src/palindrome_linked_list.rs"
+name = "palindrome_linked_list"
+path = "src/palindrome_linked_list.rs"
 [[bin]]
-name="self_dividing"
-path="src/self_dividing.rs"
+name = "self_dividing"
+path = "src/self_dividing.rs"
 [[bin]]
-name="ugly_number"
-path="src/ugly_number.rs"
+name = "ugly_number"
+path = "src/ugly_number.rs"
 [[bin]]
-name="day_of_the_year"
-path="src/day_of_the_year.rs"
+name = "day_of_the_year"
+path = "src/day_of_the_year.rs"
 [[bin]]
-name="b_perfecto"
-path="src/b_perfecto.rs"
+name = "b_perfecto"
+path = "src/b_perfecto.rs"
 [[bin]]
-name="a_play_never_ends"
-path="src/a_play_never_ends.rs"
+name = "a_play_never_ends"
+path = "src/a_play_never_ends.rs"
 [[bin]]
-name="c_trapmigiano_reggiano"
-path="src/c_trapmigiano_reggiano.rs"
+name = "c_trapmigiano_reggiano"
+path = "src/c_trapmigiano_reggiano.rs"
 [[bin]]
-name="a_make_it_zero"
-path="src/a_make_it_zero.rs"
+name = "a_make_it_zero"
+path = "src/a_make_it_zero.rs"
 [[bin]]
-name="infinite_sequence_easy"
-path="src/infinite_sequence_easy.rs"
+name = "infinite_sequence_easy"
+path = "src/infinite_sequence_easy.rs"
 [[bin]]
-name="b_comparison_string"
-path="src/b_comparison_string.rs"
+name = "b_comparison_string"
+path = "src/b_comparison_string.rs"
+[[bin]]
+name = "ultra-fast-math"
+path = "src/ultra-fast-math.rs"
+[[bin]]
+name = "a_divisibility"
+path = "src/a_divisibility.rs"
+[[bin]]
+name = "b_balanced_array"
+path = "src/b_balanced_array.rs"
+
+[[bin]]
+name = "tower_of_hanoi"
+path = "src/tower_of_hanoi.rs"
