--- a/prob/Cargo.toml
+++ b/prob/Cargo.toml
@@ -424,3 +424,18 @@ path="src/josephus.rs"
 [[bin]]
 name="convex_hull"
 path="src/convex_hull.rs"
+[[bin]]
+name="a_dreamoon_stairs"
+path="src/a_dreamoon_stairs.rs"
+[[bin]]
+name="d_not_a_cheap_string"
+path="src/d_not_a_cheap_string.rs"
+[[bin]]
+name="a_olesya_and_rodion"
+path="src/a_olesya_and_rodion.rs"
+[[bin]]
+name="a_naive_cheat"
+path="src/a_naive_cheat.rs"
+[[bin]]
+name="a_petr_and_book"
+path="src/a_petr_and_book.rs"
