--- a/prob/Cargo.toml
+++ b/prob/Cargo.toml
@@ -419,32 +419,38 @@ path = "src/tower_of_hanoi.rs"
 
 
 [[bin]]
-name="josephus"
-path="src/josephus.rs"
+name = "josephus"
+path = "src/josephus.rs"
 [[bin]]
-name="convex_hull"
-path="src/convex_hull.rs"
+name = "convex_hull"
+path = "src/convex_hull.rs"
 [[bin]]
-name="a_dreamoon_stairs"
-path="src/a_dreamoon_stairs.rs"
+name = "a_dreamoon_stairs"
+path = "src/a_dreamoon_stairs.rs"
 [[bin]]
-name="d_not_a_cheap_string"
-path="src/d_not_a_cheap_string.rs"
+name = "d_not_a_cheap_string"
+path = "src/d_not_a_cheap_string.rs"
 [[bin]]
-name="a_olesya_and_rodion"
-path="src/a_olesya_and_rodion.rs"
+name = "a_olesya_and_rodion"
+path = "src/a_olesya_and_rodion.rs"
 [[bin]]
-name="a_naive_cheat"
-path="src/a_naive_cheat.rs"
+name = "a_naive_cheat"
+path = "src/a_naive_cheat.rs"
 [[bin]]
-name="a_petr_and_book"
-path="src/a_petr_and_book.rs"
+name = "a_petr_and_book"
+path = "src/a_petr_and_book.rs"
 [[bin]]
-name="balenced-parentheses"
-path="src/balenced-parentheses.rs"
+name = "balenced-parentheses"
+path = "src/balenced-parentheses.rs"
 [[bin]]
-name="implement_stack_using_queue"
-path="src/implement_stack_using_queue.rs"
+name = "implement_stack_using_queue"
+path = "src/implement_stack_using_queue.rs"
 [[bin]]
-name="factorial"
-path="src/factorial.rs"
+name = "factorial"
+path = "src/factorial.rs"
+[[bin]]
+name = "b_taxi"
+path = "src/b_taxi.rs"
+[[bin]]
+name="array_hashmap"
+path="src/array_hashmap.rs"
