--- a/dynamic/Cargo.toml
+++ b/dynamic/Cargo.toml
@@ -77,3 +77,7 @@ path = "src/nth-row-pascals-triangle.rs"
 [[bin]]
 name = "catalan-number"
 path = "src/catalan-number.rs"
+
+[[bin]]
+name = "matrix-chain"
+path = "src/matrix-chain.rs"
