--- a/dynamic/Cargo.toml
+++ b/dynamic/Cargo.toml
@@ -90,3 +90,7 @@ path = "src/decoding-digit-seq.rs"
 name = "longest-palindrome"
 path = "src/longest-palindrome.rs"
 
+
+[[bin]]
+name = "longest-palindrome-n2"
+path = "src/longest-palindrome-n2.rs"
